# jeller

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux-release-build.yml
examples/: CMakeLists.txt
examples/custom_default_logging_callback/: CMakeLists.txt  main.cpp
examples/multiple_logging_callbacks/: CMakeLists.txt  main.cpp
examples/simplest_use_case/: CMakeLists.txt  component_one.cpp  component_two.cpp  main.cpp
include/jeller/: export_jeller_api.hpp  logger.hpp  logging_level.hpp  utils.hpp
scripts/: build.bat  build.sh  create_release_package.py  smoke_tests.bat  smoke_tests.sh
src/: logger.cpp  utils.cpp
